--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.less
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.less
@@ -1,5 +1,5 @@
-@import "~less/variables";
-@import "~less/mixins";
+@import "../../../assets/less/variables";
+@import "../../../assets/less/mixins";
 
 @color-sw-media-modal-replace-preview-border:  @color-steam-cloud;
 @border-radius-sw-media-modal-replace-preview: @border-radius-default;
