--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -47,7 +47,7 @@
                         {% block sw_media_grid_media_item_context_group_quick_actions %}
                             <div class="sw-context-menu__group">
                                 {% block sw_media_griditem_context_item_copy_item_link %}
-                                    <sw-context-menu-item @click="copyItemLink">
+                                    <sw-context-menu-item v-if="item.hasFile" @click="copyItemLink">
                                         {{ $tc('global.sw-media-grid-media-item.contextMenuCopyLinkLabel') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
