NEXT-878 - Mmove replacement into subcomponents of media module

--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -53,7 +53,7 @@
                                 {% endblock %}
 
                                 {% block sw_media_griditem_context_item_replace %}
-                                    <sw-context-menu-item @click="replaceItem">
+                                    <sw-context-menu-item @click="openModalReplace">
                                         {{ $tc('global.sw-media-grid-media-item.contextMenuReplaceLabel') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
@@ -68,6 +68,14 @@
                     </template>
                 {% endblock %}
             </sw-media-grid-item>
+
+            {% block sw_media_grid_media_item_modal_replace %}
+                <sw-media-modal-replace
+                    v-if="showModalReplace"
+                    :itemToReplace="item"
+                    @sw-media-modal-replace-close="closeModalReplace">
+                </sw-media-modal-replace>
+            {% endblock %}
         {% endblock %}
     </div>
 {% endblock %}
