--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -1,6 +1,5 @@
 {% block sw_media_modal_replace %}
     <sw-modal class="sw-media-modal-replace"
-              v-if="showReplaceModal"
               :title="$tc('global.sw-media-modal-replace.modalTitle')"
               @closeModal="emitCloseReplaceModal">
 
@@ -40,7 +39,7 @@
                 {% endblock %}
 
                 {% block sw_media_modal_replace_replace_button %}
-                    <sw-button size="small" variant="primary" @click="replaceMediaItem">
+                    <sw-button size="small" variant="primary" @click="replaceMediaItem" :disabled="!isUploadDataSet">
                         {{ $tc('global.sw-media-modal-replace.replaceButton') }}
                     </sw-button>
                 {% endblock %}
