--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.html.twig
@@ -1,39 +1,10 @@
 {% block sw_media_grid %}
-    <div class="sw-media-grid" :class="mediaGridClasses" @mousedown.left="onMouseDown" >
+    <div class="sw-media-grid" @mousedown.left="onMouseDown" >
         <slot name="content">
             {% block sw_media_grid_slot_content %}
                 <div class="sw-media-grid__content"
                      :style="mediaColumnDefinitions">
-                    {% block sw_media_grid_content_cell %}
-                        <div class="sw-media-grid__content-cell"
-                             v-for="item in items"
-                             :key="item.key" >
-                            {% block sw_media_grid_grid_item_components %}
-                                {% block sw_media_grid_media_item_component %}
-                                    <sw-media-grid-media-item
-                                        v-if="item.type === 'media'"
-                                        :multiSelectInProgress="showSelectedIndicator"
-                                        :isList="showAsList"
-                                        :selected="isItemSelected(item)"
-                                        :item="item"
-                                        :showContextMenuButton="showContextMenuButton"
-                                        @sw-media-grid-item-selection-add="handleSelection"
-                                        @sw-media-grid-item-clicked="mediaItemClicked"
-                                        @sw-media-grid-item-play="mediaItemPlayed"
-                                        @sw-media-grid-item-selection-remove="removeFromSelection"
-                                        v-on="$listeners">
-                                    </sw-media-grid-media-item>
-                                {% endblock %}
-
-                                {% block sw_media_grid_catalog_item_component %}
-                                    <sw-media-grid-catalog-item
-                                        v-if="item.type === 'catalog'"
-                                        :catalog="item" >
-                                    </sw-media-grid-catalog-item>
-                                {% endblock %}
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
+                    <slot></slot>
                 </div>
             {% endblock %}
         </slot>
