--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.less
@@ -27,6 +27,15 @@
     }
 
     .sw-media-grid-media-item__name {
-        .truncate()
+        .truncate();
+        border: 1px solid transparent;
+        line-height: 27px;
+    }
+
+    .sw-media-grid-media-item__name-field {
+        margin: 0;
+        input {
+            padding: 0 16px;
+        }
     }
 }
