NEXT-889 - Load dummies at media upload

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -54,7 +54,12 @@
                 {% endblock %}
 
                 {% block sw_media_catalog_smart_bar_media_upload %}
-                    <sw-media-upload :catalogId="getCatalogId()" @new-media-entity="onNewMedia"></sw-media-upload>
+                    <sw-media-upload
+                        :catalogId="getCatalogId()"
+                        @new-media-entity="onNewMedia"
+                        @new-upload-started="onNewUpload"
+                        @upload-success="onUploadSuccess">
+                    </sw-media-upload>
                 {% endblock %}
 
             </template>
