NEXT-889 - Add possibility to switch pages while uploading file

--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -57,8 +57,7 @@
                     <sw-media-upload
                         :catalogId="getCatalogId()"
                         @new-media-entity="onNewMedia"
-                        @new-upload-started="onNewUpload"
-                        @upload-success="onUploadSuccess">
+                        @new-upload-started="onNewUpload">
                     </sw-media-upload>
                 {% endblock %}
 
