NEXT-854 - Add tests for integration feature

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.html.twig
@@ -261,6 +261,7 @@
                 {% block sw_field_input_copySuffix %}
                     <sw-button v-if="copyAble && type === 'text'"
                                class="sw-field__copy-button"
+                               :class="displayName + '__copy-button'"
                                @click="copyToClipboard">
                         {% block sw_field_button_copySuffix %}
                             <sw-icon name="small-copy" size="16px"></sw-icon>
