--- a/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.html.twig
+++ b/Resources/administration/src/app/component/utils/sw-notifications/sw-notifications.html.twig
@@ -2,6 +2,7 @@
     <div v-if="notifications.length" class="sw-notifications" :style="notificationsStyle">
         <transition-group name="sw-notifications-slide-fade">
             <sw-alert v-for="notification in notifications"
+                      class="sw-notification__alert"
                       :key="notification.uuid"
                       :title="notification.title"
                       :variant="notification.variant"
